# messenger-plus

./: .gitignore  Cargo.toml  README.md
src/stream/: dual_stream.rs  error.rs  internal_reading_code.rs  mod.rs  read_stream.rs  stream_configuration.rs  write_stream.rs
src/utils/: mod.rs  vec.rs
tests/: dual_message_test.rs  read_message_test.rs  write_message_test.rs
